--- a/Application/app/src/main/res/layout/activity_main.xml
+++ b/Application/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.daffy.login_signupmodules_lab2_sagardafle.MainActivity">
+    tools:context="com.example.daffy.Projet_4A_Application.MainActivity">
 
     <FrameLayout
         android:id="@+id/frameContainer"
