--- a/Application/app/src/main/res/layout/activity_users_list.xml
+++ b/Application/app/src/main/res/layout/activity_users_list.xml
@@ -6,27 +6,15 @@
 
     <android.support.v7.widget.LinearLayoutCompat
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="60dp"
         android:background="@color/colorBackground"
         android:gravity="center"
-        android:orientation="vertical">
+        android:orientation="horizontal">
 
         <android.support.v7.widget.AppCompatTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/text_title"
-            android:textSize="20sp" />
-
-        <android.support.v7.widget.AppCompatTextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
             android:text="@string/text_hello" />
-
-        <android.support.v7.widget.AppCompatTextView
-            android:id="@+id/textViewName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
 
     </android.support.v7.widget.LinearLayoutCompat>
 
@@ -37,12 +25,12 @@
         android:paddingLeft="16dp"
         android:paddingTop="5dp"
         android:text="@string/text_accounts"
-        android:textColor="@android:color/black" />
+        android:textColor="@android:color/black" android:paddingStart="16dp" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerViewUsers"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
 
