--- a/Application/app/src/main/res/layout/item_user_recycler.xml
+++ b/Application/app/src/main/res/layout/item_user_recycler.xml
@@ -9,6 +9,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:focusedByDefault="true"
         android:orientation="vertical"
         android:padding="16dp">
 
@@ -57,8 +58,9 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_marginTop="5dp"
+            android:layout_weight="3"
             android:orientation="horizontal">
 
             <android.support.v7.widget.AppCompatTextView
@@ -76,6 +78,85 @@
                 android:text="@string/hint_password"
                 android:textColor="@android:color/darker_gray" />
         </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="40dp"
+            android:orientation="horizontal">
+
+            <android.support.v7.widget.AppCompatTextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="2"
+                android:text="@string/hint_edit_password"
+                android:textColor="@color/colorTextHint" />
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/textInputPasswordLayout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@android:color/white"
+                card_view:hintEnabled="false">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/editViewPassword"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@android:color/background_light"
+                    android:hint="@string/hint_new_password"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+                    android:textColorHint="@android:color/darker_gray"
+                    android:textSize="14sp" />
+            </android.support.design.widget.TextInputLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="10dp"
+            android:layout_weight="2"
+            android:orientation="horizontal">
+
+            <android.support.v7.widget.AppCompatTextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="2"
+                android:text="@string/hint_confirm_password"
+                android:textColor="@color/colorTextHint" />
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/textInputPasswordLayout2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@android:color/white"
+                card_view:hintEnabled="false">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/editViewPassword2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@android:color/white"
+                    android:hint="@string/hint_confirm_new_password"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+                    android:textColorHint="@android:color/darker_gray"
+                    android:textSize="14sp" />
+            </android.support.design.widget.TextInputLayout>
+
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/confirmEditPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_weight="2"
+            android:background="@android:color/holo_green_dark"
+            android:text="@string/hint_confirm_edit_password" />
 
     </LinearLayout>
 
