--- a/Application/app/src/main/res/menu/menu_menu_student.xml
+++ b/Application/app/src/main/res/menu/menu_menu_student.xml
@@ -5,7 +5,9 @@
 
     <item
         android:id="@+id/action_settings"
+        android:checkable="false"
+        android:icon="@drawable/logout"
         android:orderInCategory="100"
         android:title="@string/action_settings"
-        app:showAsAction="never" />
+        app:showAsAction="ifRoom" />
 </menu>
