--- a/Website/views/administrationn/creerutilisateur.html
+++ b/Website/views/administrationn/creerutilisateur.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	
+
 	<meta name="description" content="">
 
 	<title>EPF Présence</title>
@@ -156,7 +156,7 @@
 						</div>
 
 						<select class="custom-select" id="inputGroupSelect01" name="selection_droits" ng-model="myMenu">
-							<option selected>Choisir...</option>
+							<option selected value="eleve">Choisir...</option>
 							<option value="eleve">Elève</option>
 							<option value="professeur">Professeur</option>
 							<option value="admin">Etudiant</option>
