--- a/Website/views/administrationn/listeUtilisateurs.html
+++ b/Website/views/administrationn/listeUtilisateurs.html
@@ -142,8 +142,8 @@
 
 						<tbody>
 							<tr ng-repeat="user in users">
-								<td>{{user.eleve.nom}}</td>
-								<td>{{user.eleve.prenom}}</td>
+								<td>{{user.eleve.nom}}{{user.professeur.nom}}{{user.admin.nom}}</td>
+								<td>{{user.eleve.prenom}}{{user.professeur.prenom}}{{user.admin.prenom}}</td>
 								<td>{{user.email}}</td>
 								<td>{{user.droits}}</td>
 								<td style="color: red; cursor: pointer;" ng-click="supprimerUnUtilisateur(user.email)">Supprimer</td>
