--- a/Website/views/professeur/presence.html
+++ b/Website/views/professeur/presence.html
@@ -18,6 +18,10 @@
 
 	<link rel="stylesheet" type="text/css" href="/css/style.css" />
 
+	<script type="text/javascript" src="/vendor/angular/angular.js"></script>
+	<script src="/angular-locale_fr-fr.js"></script>
+	<script type="text/javascript" src="/core.js"></script>
+
 </head>
 
 <body class="fixed-nav sticky-footer bg-dark">
@@ -113,21 +117,7 @@
 				<div class="col-12">
 					<h1>Absences</h1>
 
-					<div>
-		            <a class="btn btn-primary btn-block" href="/creerutilisateur" style="background-color: rgb(228,231,235); border-color: rgb(228,231,235); ;color: black; margin-bottom: 5px; margin-top: 50px;">Recherche par année</a>
-		            </div>
 
-		            <div>
-		            <a class="btn btn-primary btn-block" value="/administration" style="background-color: rgb(228,231,235); border-color: rgb(228,231,235); margin-bottom: 5px;">Recherche par matière</a>
-		            </div>
-
-		            <div>
-		            <a class="btn btn-primary btn-block" value="/administration" style="background-color: rgb(228,231,235); border-color: rgb(228,231,235); margin-bottom: 5px;">Recherche par date</a>
-		            </div>
-
-		            <div>
-		            <a class="btn btn-primary btn-block" value="/administration" style="background-color: rgb(228,231,235); border-color: rgb(228,231,235); margin-bottom: 5px;">Rechercher une personne</a>
-		            </div>
 
 				</div>
 			</div>
@@ -140,7 +130,6 @@
 		<div class="container">
 			<div class="text-center">
 				<small>footer fin de la page</small>
-				<!--<small>Copyright © Your Website 2018</small>-->
 			</div>
 		</div>
 	</footer>
