--- a/Application/app/src/main/res/layout/fragment1_menu.xml
+++ b/Application/app/src/main/res/layout/fragment1_menu.xml
@@ -84,7 +84,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
             android:background="@android:color/holo_green_dark"
-            android:text="@string/send_password" />
+            android:text="@string/send_password"
+            android:onClick="sendPassword"/>
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
